# agentic-rag-pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: .env.example  CODEOWNERS
.github/workflows/: ci.yml  security.yml
infra/: main.bicep  main.json  main.parameters.json
scripts/: deploy_infra.ps1  set_branch_protection.ps1  validate_infra.ps1
src/agentic_rag_azure.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/api/: main.py  routes.py
tests/unit/: test_health.py
